# DiscordWebhookProxy

./: Cargo.toml  Dockerfile  README.md  flake.nix
src/: main.rs
src/api/: discord.rs  mod.rs  routes.rs  structs.rs  webhook_queue.rs
src/database/migrations/: up.sql
src/database/wrappers/queue/: models.rs  schema.rs
src/migrations/: down.sql
webhook-proxy-queue-db/: db
