[package]
name = "discord-webhook-proxy"
version = "1.0.0"
edition = "2021"
authors = ["ehewes, bordomantra"]
description = "DiscordWebhookProxy is a powerful Discord proxy service designed for Roblox, built to prevent abuse and provide secure relaying. It offers complete server management, allowing users to set hardware usage caps and ban abusive users via an intuitive dashboard. Easily deployed with one-click options for Docker, Nix, or Vercel."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ehewes/DiscordRustScraper"
repository = "https://github.com/ehewes/DiscordRustScraper"
keywords = ["cli", "discord", "bot", "webhook", "proxy"]
categories = ["command-line-utilities"]

[dependencies]
minreq = { version = "2.7", features = ["https"] }
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
tokio = "1.44.1"
time = "0.3.40"
serde_json = "1.0.140"
sled = "0.34"
